--- a/src/app/modules/performance/pages/key-result-area/key-result-area.component.html
+++ b/src/app/modules/performance/pages/key-result-area/key-result-area.component.html
@@ -40,13 +40,13 @@
         </select>
       </div> -->
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label>Rating Type</label>
         <select class="form-control" [(ngModel)]="editingData.ratingTypeId">
           <option value="1">Open Ended</option>
           <option value="2">Close Ended</option>
         </select>
-      </div>
+      </div> -->
 
       <div class="form-group">
         <label>Key Result Area</label>
@@ -54,29 +54,43 @@
       </div>
 
       <div class="form-group">
+        <label>Strategy Category</label>
+        <select class="form-control" [(ngModel)]="editingData.strategyCategoryId">
+          <option>--Select Strategy--</option>        
+          <option value="1">Financial</option>     
+          <option value="2">Customer</option>   
+          <option value="3">Process_Or_Operations</option>   
+          <option value="4">Learning_And_Growth</option>   
+     
+        </select>
+      </div>
+      <div class="form-group">
         <label>Score</label>
-        <input type="number" class="form-control" [(ngModel)]="editingData.maximum_score_obtainable"/>
+        <input type="number" class="form-control" min="1" [(ngModel)]="editingData.maximum_score_obtainable"/>
       </div>
 
       <div class="form-group">
         <label>Weight</label>
-        <input type="number" class="form-control" [(ngModel)]="editingData.weight"/>
+        <input type="number" min="1" class="form-control" [(ngModel)]="editingData.weight"/>
       </div>
 
       <div class="form-group">
         <label>Description</label>
-        <ngx-wysisyg-input [(value)]="editingData.description"></ngx-wysisyg-input>
+        <textarea rows="5" [(ngModel)]="editingData.description" nbInput fullWidth></textarea>
+      
       </div>
       <div class="form-group">
         <label>Instruction</label>
-        <ngx-wysisyg-input [(value)]="editingData.instructions"></ngx-wysisyg-input>
+        <textarea rows="5" [(ngModel)]="editingData.instructions" nbInput fullWidth></textarea>
       </div>
       <div class="form-group">
         <label></label>
         <div style="display: flex">
-          <button nbButton status="primary" (click)="submitForm()">save</button>
+          <ngx-loadable-button (click)="submitForm()" [loading]="loadingSave" style="margin-right: 1rem;">Save</ngx-loadable-button>
+
           <div class="m-1"></div>
           <button
+          (click)="showModal = false"
             nbButton
             status="primary"
             outline
