--- a/src/app/modules/performance/page/hr-review-list/hr-review-list.component.html
+++ b/src/app/modules/performance/page/hr-review-list/hr-review-list.component.html
@@ -1,5 +1,5 @@
 <ngx-componentsheader
-  pageName="Key Result Areas"
+  pageName="Appraisals"
   [requiredButton]="topActionButtons"
   (buttonClick)="pageActionClicked($event)"
 ></ngx-componentsheader>
@@ -8,7 +8,7 @@
   ><ngx-default-content
     *ngIf="showEmpty"
     pageHeader=""
-    pageDescription="No KRA to review right now"
+    pageDescription="No Appraisal to review right now"
     buttonValue=""
     (buttonClick)="createNewClicked()"
     [loading]="loading"
